...
            android:layout_height="@dimen/pocketpaint_welcome_dots_height"
            android:layout_width="wrap_content"
            android:orientation="horizontal" />

        <androidx.appcompat.widget.AppCompatButton
            style="?borderlessButtonStyle"
            android:id="@+id/pocketpaint_btn_next"
            android:layout_alignEnd="@id/pocketpaint_layout_dots"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/next"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            style="?borderlessButtonStyle"
            android:id="@+id/pocketpaint_btn_skip"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/pocketpaint_layout_dots"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/skip"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <View
        android:background="@color/pocketpaint_color_picker_white"
        android:id="@+id/pocketpaint_intro_horizontal_line"
        android:layout_above="@id/pocketpaint_intro_navigation"
        android:layout_height="1dp"
        android:layout_width="match_parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pocketpaint_view_pager"
        android:layout_above="@id/pocketpaint_intro_horizontal_line"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

</RelativeLayout>

