...
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/pocketpaint_welcome_margin_side"
    android:paddingStart="@dimen/pocketpaint_welcome_margin_side"
    android:paddingTop="@dimen/pocketpaint_welcome_margin_top">

    <TextView
        android:id="@+id/pocketpaint_intro_started_head"
        style="@style/PocketPaintWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/enjoy_pocket_paint"/>

...
