...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/pocketpaint_welcome_margin_top">

    <TextView
        android:id="@+id/pocketpaint_intro_landscape_head"
        style="@style/PocketPaintWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/pocketpaint_welcome_margin_side"
        android:layout_marginStart="@dimen/pocketpaint_welcome_margin_side"
        android:minLines="2"
...
