...
                style="@style/PocketPaintSelectableButton"
                android:layout_width="@dimen/pocketpaint_main_bottom_bar_button_width"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pocketpaint_tool_line"/>

            <ImageButton
                android:id="@+id/tools_rectangle"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="@dimen/pocketpaint_main_bottom_bar_button_width"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pocketpaint_tool_rectangle"/>

            <ImageButton
...
                style="@style/PocketPaintSelectableButton"
                android:layout_width="@dimen/pocketpaint_main_bottom_bar_button_width"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pocketpaint_tool_cursor"/>

            <ImageButton
                android:id="@+id/tools_text"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="@dimen/pocketpaint_main_bottom_bar_button_width"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pocketpaint_tool_text"/>

            <ImageButton
...
